Chapter 5 : Putting It All Together

--- a/Python/Time Series Analysis in Python/takeaways.ipynb
+++ b/Python/Time Series Analysis in Python/takeaways.ipynb
@@ -79,8 +79,15 @@
     "    - incremental benefit of adding another lag\n",
     "    - quantifies how significance adding n-th lag is when there is already (n-1)th lag\n",
     "- Information Criteria : adjusts penalties on number of parameters in the model. The best model has least AIC or/and BIC model among the peers.\n",
+    "- Cointegration model: \n",
+    "    - two series can be random walk, however the distance between them may be mean reverting. \n",
+    "    - Check P-cQ with dicky fuller to see if that is random walk\n",
+    "    - eg: Owner and his dog with a leash. steps of owner or dog is separately random walk. but the distance between them is mean reverting\n",
+    "        - If dog falls too far behind, it gets pulled forward\n",
+    "        - If dog gets too far ahead, it gets pulled back\n",
+    "    - eg : Natural gas vs heating oil stock movement. or, economic substitutes or competing company stocks.\n",
     "- Modeling flow:\n",
-    "    1. See if the series is stationary (dicky fuller test, higher p-value means non-stationary)\n",
+    "    1. See if the series is stationary (dicky fuller test, higher p-value means non-stationary or random walk)\n",
     "    2. take difference / percent change (to make it stationary)\n",
     "    3. compute ACF and PACF\n",
     "    4. Fit few AR, MA and ARMA models\n",
@@ -93,7 +100,6 @@
    "metadata": {},
    "source": [
     "```\n",
-    "\n",
     "df['num_col'].autocorr() # autocorrelation value\n",
     "# Plot ACF and PACF graph\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
@@ -117,7 +123,7 @@
     "plt.plot(simulated_data)\n",
     "# ARIMA modeling \n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
-    "model = ARIMA(data, order=(1,0,0)) # (AR, diff, MA)\n",
+    "model = ARIMA(data, trend='t', order=(1,0,0)) # (AR, diff, MA), t for linear trend\n",
     "result = model.fit()\n",
     "forecast = result.get_forecast(steps=50) # Forecast next 50 values\n",
     "print(result.summary())\n",
@@ -132,7 +138,124 @@
     "# Visualize best model : AR or MA values on X axis and AIC, BIC on Y axis\n",
     "plt.plot(ar_values, aic_values, label='AIC', marker='o')\n",
     "plt.plot(ar_values, bic_values, label='BIC', marker='o')\n",
+    "# Co-integration model (Also check P-cQ with dicky fuller)\n",
+    "from statsmodels.tsa.stattools import coint\n",
+    "coint(P,Q)\n",
+    "# Regress BTC on ETH (y = mx+c)\n",
+    "ETH = sm.add_constant(ETH)\n",
+    "result = sm.OLS(BTC,ETH).fit()\n",
+    "b = result.params[1] \n",
+    "adf_stats = adfuller(BTC['Price'] - b*ETH['Price']) # Compute ADF\n",
+    "adf_p_stat =  adf_stats[1]\n",
+    "### Running rate of return\n",
+    "row_gain_series = data.SP500.pct_change() # period return\n",
+    "real_val_after_gain = row_gain_series.add(1)\n",
+    "cumulative_return = real_val_after_gain.cumprod().sub(1)\n",
+    "percentage_cum_gain = cumulative_return.mul(100).\n",
+    "### Alternative : Use a function to apply change in each row of the column\n",
+    "def cumulative_return_func(row):\n",
+    "    return np.prod(row + 1) - 1\n",
+    "row_gain_series = time_df[\"close\"].pct_change() # period return\n",
+    "cumulative_return = row_gain_series.rolling('30D').apply(cumulative_return_func)\n",
+    "percentage_cum_gain = cumulative_return.mul(100).\n",
+    "### Weighted index\n",
+    "# company_capital = no_shares * stock_price\n",
+    "# total_market_capital_worldwide = sum(company_capital)\n",
+    "# company_weight = company_capital / total_market_capital_worldwide\n",
+    "# company_index = company_weight * company_pct_change\n",
     "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Python date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from datetime import date\n",
+    "from datetime import datetime\n",
+    "# Create date\n",
+    "d =  date(2017, 6, 21) # ISO format: YYYY-MM-DD\n",
+    "# Create a datetime\n",
+    "dt = datetime(year= 2017 , month= 10 , day= 1 , hour= 15 , minute= 23 , second= 25 , microsecond= 500000 )\n",
+    "# Change value of existing datetime\n",
+    "dt_changed = dt.replace(minute=0, second=0, microsecond=0)\n",
+    "# Sort date\n",
+    "dates_ordered = sorted(date_list)\n",
+    "# Parse datetime\n",
+    "dt = datetime.strptime(\"12/30/2017 15:19:13\", \"%m/%d/%Y %H:%M:%S\")\n",
+    "d.isoformat() # Express the date in ISO 8601 format\n",
+    "print(d.strftime(\"%Y/%m/%d\")) # Print date in Format: YYYY/MM/DD\n",
+    "print(dt.strftime(\"%Y-%m-%d %H:%M:%S\")) # Print datetime in specific format\n",
+    "##### Date addition / subtraction\n",
+    "from datetime import timedelta\n",
+    "delta = d2 - d # Subtract two dates\n",
+    "delta.days # Elapsed time in days\n",
+    "delta.total_seconds() # Elapsed time in seconds\n",
+    "td = timedelta(days=29) # Create a 29 day timedelta\n",
+    "print(d + td) # Add delta with existing date\n",
+    "# timestamp value\n",
+    "ts = 1514665153.0\n",
+    "# Convert to datetime from timestamp and print\n",
+    "print(datetime.fromtimestamp(ts))\n",
+    "# Parsing date\n",
+    "df = pd.read_csv('filename.csv', parse_dates = ['date_col1', 'date_col2'], index_col='date_col3') # during import\n",
+    "df[\"date_col\"] = pd.to_datetime(df[\"date_col\"], format = \"%Y-%m-%d %H:%M:%S\", errors='coerce') # Using pandas format specified\n",
+    "df[\"date_col\"] = df[\"date_col\"].dt.strftime(\"%d-%m-%Y\") # Using python library format specified\n",
+    "# Extract information\n",
+    "df[\"date_col\"].dt.month # Extract month information\n",
+    "df[\"date_col\"].dt.day_name() # Extract day name : Sunday, Monday etc\n",
+    "df[\"date_col\"].dt.year # Extract year information\n",
+    "# Shift dates\n",
+    "df[\"date_col\"].shift(periods=1) # Push values 1 row below, first value becomes null. LEAD\n",
+    "df[\"date_col\"].shift(periods=-1) # Pull values 1 row above, last value becomes null. LAG\n",
+    "# Numeric operations on date column\n",
+    "df[\"date_co1l\"].div(df[\"date_col2\"]) # percentage changes between 2 date columns\n",
+    "df[\"date_co1l\"].pct_change(periods=3) # percentage change of same date column after 3 shifts\n",
+    "df[\"date_co1l\"].diff() # Difference in value between 2 adjacent rows of same column\n",
+    "df[\"date_co1l\"].sub(1).mul(100) # subtracting 1 from the column, then multiply 100 with the column\n",
+    "# Creating date\n",
+    "time_stamp1 = pd.Timestamp(datetime(2017, 1, 1))\n",
+    "time_stamp2 = pd.Timestamp('2017-01-01')\n",
+    "# Creating period\n",
+    "period = pd.Period('2017-01') # default: month-end period\n",
+    "period + 2 # period after 2 unit ('2017-03' in this case)\n",
+    "period.asfreq('D') # convert to daily\n",
+    "period.to_timestamp() # Convert period to timestamp\n",
+    "timestamp_1.to_period('M') # Convert timestamp to period\n",
+    "# Add missing time values / change frequency (can be alternative to .asfreq)\n",
+    "monthly_dates = pd.date_range(start, end, freq=\"M\")\n",
+    "monthly = pd.Series(data=df[\"x\"], index=monthly_dates)\n",
+    "weekly_dates = pd.date_range(start, end, freq=\"W\")\n",
+    "monthly.reindex(weekly_dates)\n",
+    "# Create time series\n",
+    "t_series = pd.date_range(start='2017-1-1', periods=12, freq='M')\n",
+    "df.set_index('date_col', inplace=True) # setting the time series as index of dataframe\n",
+    "# Sampling date (Make sure the index of dataframe is time series), try to always use .resample\n",
+    "timed_df.resample('DS').asfreq().agg(['mean']) # Down-sampling to day start using .resample and mean aggregation\n",
+    "timed_df.resample('1H').interpolate(method='linear') # Up-sampling with .resample, and fill missing values linearly\n",
+    "timed_df.asfreq('1H', method='ffill') # Up-sampling with .asfreq and fill missing values with forward fill\n",
+    "timed_df.asfreq(freq='3H', method='linear') # Down-sampling (less values, aggregated values, linearly interpolated)\n",
+    "timed_df.resample('M', on = 'date_col')['col1'].mean() # Standard syntax\n",
+    "resampled_df.size() # Resampling count\n",
+    "# Normalization and comparison of time series data\n",
+    "first_row = time_df.iloc[0]\n",
+    "normalized = time_df.div(first_row).mul(100)\n",
+    "comparison_df = normalized.sub(df['normalized_benchmark_series'], axis=0)\n",
+    "# Add timezone in a datetime column\n",
+    "df['date_col'] = df['date_col'].dt.tz_localize('America/New_York', ambiguous='NaT')\n",
+    "# Convert to another timezone\n",
+    "df['date_col'] = df['date_col'].dt.tz_convert('Europe/London')\n",
+    "# Window functions:\n",
+    "time_df.rolling(window='30D').agg(['mean', 'std']) # moving range / rolling window\n",
+    "time_df.expanding().agg(['mean', 'sum']) # expanding range / cumulative expanding window\n",
     "```"
    ]
   },
@@ -365,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ARMA Model"
+    "### ARIMA Model : The combination of both AR and MA with the integration of difference (percent change)"
    ]
   },
   {
@@ -374,11 +497,6 @@
    "source": [
     "<center><img src=\"images/04.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
