Chapter 2 : Fetching, ranking, and paging

--- a/SQL/PostgreSQL Summary Stats and Window Functions/takeaways.ipynb
+++ b/SQL/PostgreSQL Summary Stats and Window Functions/takeaways.ipynb
@@ -64,8 +64,15 @@
     "-- PARTITION : resets for every new categorical value in the column\n",
     "-- ROWS : row, can be a RANGE as well\n",
     "-- BETWEEN <start> AND <finish> : Window size\n",
-    "-- Some Other window functions : ROW_NUMBER(), DENSE_RANK(), NTILE(n), LEAD(col_name), LAG(col_name), SUM(), MIN(), MAX() etc\n",
+    "-- Some Other window functions : ROW_NUMBER(), RANK(), DENSE_RANK(), NTILE(n), LEAD(col_name), LAG(col_name), SUM(), MIN(), MAX(), FIRST_VALUE(), LAST_VALUE() etc\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
    ]
   },
   {
