Chapter 3 : Aggregate window functions and frames

--- a/SQL/PostgreSQL Summary Stats and Window Functions/takeaways.ipynb
+++ b/SQL/PostgreSQL Summary Stats and Window Functions/takeaways.ipynb
@@ -78,6 +78,54 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### NTILE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- used for paging (divide data into equal number of splits)\n",
+    "- Used to Split the data into n equally sized pages\n",
+    "- so each each page will contain no of rows = total_row / n "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Row vs Range"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Both do the same thing except one major difference\n",
+    "- ROWS = treats each individual data separatelly\n",
+    "- RANGE = treats duplicates as single entities\n",
+    "- ROWS is mostly preferable against RANGE\n",
+    "- ROWS show characteristics like DENSE_RANK whereas RANGE show characteristics like RANK"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.01.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
