Chapter 4 : Beyond window functions

--- a/SQL/PostgreSQL Summary Stats and Window Functions/takeaways.ipynb
+++ b/SQL/PostgreSQL Summary Stats and Window Functions/takeaways.ipynb
@@ -126,7 +126,133 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pivoting a table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "-- Original query before pivoting\n",
+    "SELECT\n",
+    "Country, Year, COUNT(*) AS Awards\n",
+    "FROM Summer_Medals\n",
+    "WHERE\n",
+    "Country IN ('CHN', 'RUS', 'USA')\n",
+    "AND Year IN (2008, 2012)\n",
+    "AND Medal = 'Gold'\n",
+    "GROUP BY Country, Year\n",
+    "ORDER BY Country ASC, Year ASC;\n",
+    "\n",
+    "-- Using pivoting\n",
+    "CREATE EXTENSION IF NOT EXISTS tablefunc;\n",
+    "SELECT * FROM CROSSTAB($$\n",
+    " -- Start original query\n",
+    "SELECT\n",
+    "Country, Year, COUNT(*) :: INTEGER AS Awards -- make sure to cast\n",
+    "FROM Summer_Medals\n",
+    "WHERE\n",
+    "Country IN ('CHN', 'RUS', 'USA')\n",
+    "AND Year IN (2008, 2012)\n",
+    "AND Medal = 'Gold'\n",
+    "GROUP BY Country, Year\n",
+    "ORDER BY Country ASC, Year ASC;\n",
+    "-- End original query\n",
+    "$$) AS ct (Country VARCHAR, \"2008\" INTEGER, \"2012\" INTEGER) -- Country column remains, others are new columns\n",
+    "ORDER BY Country ASC;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aggregation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "-- nonagg_col = the columns that are not aggregated\n",
+    "-- agg_col = the columns that are being aggregated with agg funcs\n",
+    "-- agg funcs = count, sum, avg, min, max\n",
+    "SELECT nonagg_col1, nonagg_col2,  COUNT(agg_col) \n",
+    "FROM table_name\n",
+    "WHERE nonagg_col1 IN ('A','B')\n",
+    "GROUP BY nonagg_col1, nonagg_col2 -- or ROLLUP(nonagg_col1, nonagg_col2) or CUBE(nonagg_col1, nonagg_col2)\n",
+    "HAVING COUNT(agg_col) >10\n",
+    "ORDER BY nonagg_col2 DESC\n",
+    "LIMIT 5;\n",
+    "-- ROLLUP : Hierarchical group-level aggregations of specified columns from left to right\n",
+    "-- CUBE : All possible combination of group-level aggregations\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### COALESCE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Takes the first non-null value in the list\n",
+    "- eg : `SELECT COALESCE(NULL, NULL, NULL, 'HELLO WORLD', NULL, 'Example.com');` will take 'HELLO WORLD'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### STRING_AGG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`SELECT COALESCE(NULL, NULL, NULL, 'HELLO WORLD', NULL, 'Example.com');`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "-- Assume you have the CTE\n",
+    "WITH cte AS (\n",
+    "    SELECT STRING_AGG(Country, ', ') AS ConcatenatedCountries\n",
+    "    FROM Country_Medals\n",
+    ")\n",
+    "\n",
+    "-- Use STRING_SPLIT with CROSS APPLY\n",
+    "SELECT value AS Country\n",
+    "FROM cte\n",
+    "CROSS APPLY STRING_SPLIT(cte.ConcatenatedCountries, ', ');\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
