Chapter 3 : Predicting Time Series Data

--- a/Python/Machine Learning for Time Series Data in Python/takeaways.ipynb
+++ b/Python/Machine Learning for Time Series Data in Python/takeaways.ipynb
@@ -23,7 +23,11 @@
     "    - each row is a point in time/amplitude of a sample\n",
     "- So when using for machine learning,\n",
     "    - each column name is a label\n",
-    "    - each column series should be converted to a row of features (eg: mean, max, std, tempo mean, beat mean, stft mean etc)"
+    "    - each column series should be converted to a row of features (eg: mean, max, std, tempo mean, beat mean, stft mean etc)\n",
+    "    - you can also use percentile to get value at specific percentile and use them as features\n",
+    "    - NEVER SHUFFLE\n",
+    "    - Missing data should be interpolated for time series\n",
+    "    - Rolling window can be used along with stat functions as well for generating new features\n"
    ]
   },
   {
@@ -73,6 +77,44 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Find missing data through visualization : \n",
+    "    1. Missing data should be interpolated for time series\n",
+    "    2. Rolling window can be used along with stat functions as well"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from functools import partial\n",
+    "\n",
+    "def multiply(a, b):\n",
+    "    return a * b\n",
+    "\n",
+    "double = partial(multiply, b=2)\n",
+    "\n",
+    "result = double(10)\n",
+    "print(result)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
