Chapter 2 : Summary Statistics and Diagnostics

--- a/Python/Visualizing Time Series Data in Python/takeaways.ipynb
+++ b/Python/Visualizing Time Series Data in Python/takeaways.ipynb
@@ -40,8 +40,8 @@
    "metadata": {},
    "source": [
     "```\n",
-    "discoveries = df['1960':'1970'] # Slicing using time index\n",
-    "ax = discoveries.plot(color='blue', figsize=(12, 5), fontsize=12, linewidth=3, linestyle='--')\n",
+    "sub_df = df['1960':'1970'] # Slicing using time index\n",
+    "ax = sub_df.plot(color='blue', figsize=(12, 5), fontsize=12, linewidth=3, linestyle='--')\n",
     "ax.set_xlabel('X label')\n",
     "ax.set_ylabel('Y label')\n",
     "ax.axvline('1969-01-01', color='red', linestyle='--') # Vertical Line, uses time index\n",
@@ -49,6 +49,67 @@
     "ax.axvspan('1964-01-01', '1968-01-01', color='red', alpha=0.3) # Vertical region, uses time index range\n",
     "ax.axhspan(8, 6, color='green', alpha=0.3)  # Horizontal region, uses y value range\n",
     "\n",
+    "rolling_mean = df.rolling(window=52).mean()\n",
+    "# Other types of plots\n",
+    "df.plot(kind='hist', bins=100) # other types include 'kde', 'box' etc\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Check missing data\n",
+    "df.isna().any()\n",
+    "df.isna().sum()\n",
+    "# Visualize missing data information\n",
+    "import missingno as msno\n",
+    "import matplotlib.pyplot as plt\n",
+    "msno.matrix(df)\n",
+    "plt.show()\n",
+    "\n",
+    "# Drop missing data column\n",
+    "df_dropped = df.dropna(subset = ['col'], axis = 1) # 0 for row\n",
+    "df.dropna(axis = 0) # Drop entire row for missing value (default)\n",
+    "df.dropna(axis = 1) # Drop entire column for missing value\n",
+    "\n",
+    "# Replace/impute missing data with single value\n",
+    "col_mean = df['col'].mean()\n",
+    "df_imputed = df.fillna({'col': col_mean})\n",
+    "df.fillna(method='bfill')\n",
+    "df.interpolate(method='linear')\n",
+    "df['col'].replace(to_replace=np.nan, value = some_mean,inplace = True) # Alternative\n",
+    "# Replace/impute missing data with series\n",
+    "series_imp = df['col1'] * 5\n",
+    "df_imputed = df.fillna({'col2':series_imp})\n",
+    "\n",
+    "df[\"col\"].value_counts() # Look out for suspicious values\n",
+    "\n",
+    "##### Strategic dropping example ########\n",
+    "# Drop missing values where <= 5% of data in column are missing , otherwise impute values\n",
+    "threshold = len(df) * 0.05\n",
+    "cols_to_drop = df.columns[df.isna().sum() <= threshold]\n",
+    "df.dropna(subset=cols_to_drop, inplace=True)\n",
+    "cols_with_missing_values = df.columns[salaries.isna().sum() > 0]\n",
+    "for col in cols_with_missing_values[:-1]:\n",
+    "    df[col].fillna(df[col].mode()[0])\n",
+    "subgroup_dict = df.groupby(\"cat_col\")[\"num_col\"].median().to_dict()\n",
+    "df[\"num_col\"] = df[\"num_col\"].fillna(df[\"cat_col\"].map(subgroup_dict))\n",
     "```"
    ]
   },
