Chapter 2 : Working with DATE/TIME Functions and Operators

--- a/SQL/Functions for Manipulating Data in PostgreSQL/takeaways.ipynb
+++ b/SQL/Functions for Manipulating Data in PostgreSQL/takeaways.ipynb
@@ -101,6 +101,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### SQL datetime"
    ]
   },
@@ -109,9 +116,31 @@
    "metadata": {},
    "source": [
     "```\n",
-    "SELECT rental_date + INTERVAL '3 days' AS expected_return_date -- adding with timestamp\n",
+    "\n",
+    "\n",
+    "-- DATE operations (Advised : Use TIMESTAMP FORMAT instead of DATE FORMAT to acquire preciseness)\n",
+    "SELECT date '2005-09-11' - date '2005-09-10'; -- Result will be an integer as no of days (1)\n",
+    "SELECT date '2005-09-11' + integer '3'; -- Result will be a date (2005-09-14)\n",
+    "\n",
+    "-- TIMESTAMP operations\n",
+    "SELECT date '2005-09-11 00:00:00' - date '2005-09-09 12:00:00'; -- Result will be an interval (1 day 12:00:00)\n",
+    "SELECT AGE(timestamp '2005-09-11 00:00:00', timestamp '2005-09-09 12:00:00'); -- Result will be an interval (1 day 12:00:00)\n",
+    "SELECT timestamp '2019-05-01' + 21 * INTERVAL '1 day';  -- Result will be a new timestamp (2019-05-22 00:00:00)\n",
+    "SELECT rental_date + INTERVAL '3 days' AS expected_return_date -- adding timestamp with interval = new timestamp\n",
     "FROM rental;\n",
     "\n",
+    "-- Current Timestamp\n",
+    "SELECT NOW()::timestamp;    -- casting will cut the timezone information\n",
+    "SELECT CAST(NOW() as timestamp);\n",
+    "SELECT CURRENT_TIMESTAMP(2); -- control precision\n",
+    "SELECT CURRENT_DATE; -- current date\n",
+    "SELECT CURRENT_TIME; -- current time with timezone information\n",
+    "\n",
+    "-- Extract date and time information\n",
+    "\n",
+    "SELECT EXTRACT (month FROM timestamp '2005-01-24 05:12:00') AS month; -- Result will be month (1)\n",
+    "SELECT DATE_PART('month', timestamp '2005-01-24 05:12:00') AS month; -- Result will be month (1)\n",
+    "SELECT DATE_TRUNC('year', TIMESTAMP '2005-05-21 15:30:30'); -- Result will truncate to specified precision (2005-01-01 00:00:00)\n",
     "```"
    ]
   },
