Chapter 3 : Parsing and Manipulating Text

--- a/SQL/Functions for Manipulating Data in PostgreSQL/takeaways.ipynb
+++ b/SQL/Functions for Manipulating Data in PostgreSQL/takeaways.ipynb
@@ -147,6 +147,51 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### String Operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT CONCAT(col_A,' ', col_B) AS concat_col FROM table_name; -- Concat 2 columns\n",
+    "SELECT col_A || ' ' || col_B AS concat_col FROM table_name; -- Concat 2 columns\n",
+    "\n",
+    "SELECT UPPER(col) FROM table_name; -- Turning a column into all uppercase\n",
+    "SELECT LOWER(col) FROM table_name; -- Turning a column into all lowercase\n",
+    "SELECT LEFT(col, length) FROM table_name; -- Take n no of characters from the left side of the column\n",
+    "SELECT RIGHT(col, length) FROM table_name; -- Take n no of characters from the right side of the column\n",
+    "-- Extracting Substring\n",
+    "SELECT SUBSTRING(col, starting_index, length) FROM table_name; -- starting_index, length are integer values\n",
+    "SELECT SUBSTRING(col FROM starting_index FOR POSITION('@' IN col)) FROM table_name; -- starting_index, length are integer values\n",
+    "SELECT SUBSTR(col, starting_index, length) FROM table_name; -- starting_index, length are integer values\n",
+    "SELECT REVERSE(col) FROM table_name; -- Reverse a string\n",
+    "SELECT CHAR_LENGTH(col) FROM table_name;  -- length of a string column\n",
+    "SELECT LENGTH(col) FROM table_name; -- length of a string column\n",
+    "SELECT POSITION('@' IN col) FROM table_name; -- position of a character in the string\n",
+    "SELECT STRPOS(email, '@') FROM table_name; -- position of a character in the string\n",
+    "SELECT REPLACE(col, 'old string', 'new string') FROM table_name; -- replacing characters\n",
+    "SELECT LPAD('padded', total_string_size, '#'); -- appending character from the left (####padded)\n",
+    "SELECT RPAD('padded', total_string_size, '#'); -- appending character from the right (padded####)\n",
+    "-- TRIM([leading | trailing | both] [characters] from string)\n",
+    "SELECT TRIM(BOTH 'x' FROM 'xxxxHelloxxxx') -- Hello\n",
+    "SELECT TRIM(TRAILING 'x' FROM 'xHelloxxxx') -- xHello\n",
+    "SELECT TRIM(LEADING 'x' FROM 'xxxxHellox') -- Hellox\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
