Chapter 4 : Full-text Search and PostgresSQL Extensions

--- a/SQL/Functions for Manipulating Data in PostgreSQL/takeaways.ipynb
+++ b/SQL/Functions for Manipulating Data in PostgreSQL/takeaways.ipynb
@@ -186,13 +186,131 @@
     "SELECT TRIM(BOTH 'x' FROM 'xxxxHelloxxxx') -- Hello\n",
     "SELECT TRIM(TRAILING 'x' FROM 'xHelloxxxx') -- xHello\n",
     "SELECT TRIM(LEADING 'x' FROM 'xxxxHellox') -- Hellox\n",
+    "\n",
+    "-- Pattern matching\n",
+    "SELECT * FROM table_name WHERE col LIKE '_ELF%'; -- Case sensitive match\n",
+    "SELECT * FROM table_name WHERE col ILIKE '_ELF%'; -- Case insensitive match\n",
+    "SELECT * FROM table_name WHERE to_tsvector(col) @@ to_tsquery('elf'); -- Case insensitive match\n",
+    "\n",
+    "CREATE EXTENSION IF NOT EXISTS fuzzystrmatch;\n",
+    "SELECT levenshtein('GUMBO', 'GAMBOL'); -- levenshtein score of similarity between 2 words\n",
+    "CREATE EXTENSION IF NOT EXISTS pg_trgm;\n",
+    "SELECT similarity('GUMBO', 'GAMBOL'); -- trigram similarity score\n",
+    "\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SQL Custom Data Type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "-- Create table with custom ENUM data type\n",
+    "CREATE TYPE mood AS ENUM ('happy', 'sad', 'angry', 'excited'); -- custom ENUM data type\n",
+    "CREATE TABLE person ( -- table creation\n",
+    "    id SERIAL PRIMARY KEY,\n",
+    "    name VARCHAR(100),\n",
+    "    current_mood mood\n",
+    ");\n",
+    "INSERT INTO person (name, current_mood) VALUES ('Alice', 'happy'); -- data insertion\n",
+    "\n",
+    "-- Create other custom data type\n",
+    "CREATE TYPE phone_number AS ( -- custom type\n",
+    "    country_code text,\n",
+    "    area_code text,\n",
+    "    number text\n",
+    ");\n",
+    "CREATE TABLE contacts ( -- creating table\n",
+    "    contact_id serial PRIMARY KEY,\n",
+    "    name text,\n",
+    "    phone phone_number\n",
+    ");\n",
+    "INSERT INTO contacts (name, phone) VALUES   -- data insertion\n",
+    "  ('John Doe', ROW('1', '555', '1234567')),\n",
+    "  ('Jane Smith', ROW('1', '555', '9876543'));\n",
+    "\n",
+    "SELECT name, (phone).number AS number -- query table with custom data type \n",
+    "FROM contacts;\n",
+    "\n",
+    "-- See user defined data types\n",
+    "SELECT typname, typcategory\n",
+    "FROM pg_type\n",
+    "\n",
+    "-- See using information schema\n",
+    "SELECT COLUMN_NAME,\n",
+    "       DATA_TYPE,\n",
+    "       UDT_NAME,\n",
+    "       IS_NULLABLE,\n",
+    "       CHARACTER_MAXIMUM_LENGTH,\n",
+    "       NUMERIC_PRECISION,\n",
+    "       NUMERIC_SCALE\n",
+    "FROM INFORMATION_SCHEMA.COLUMNS -- INFORMATION_SCHEMA.TABLES for table information\n",
+    "WHERE TABLE_NAME='your_table_name';\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Custom Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "-- Function that returns square of a given parameter\n",
+    "CREATE FUNCTION func_name(i integer) RETURNS integer AS \n",
+    "$$\n",
+    "    BEGIN\n",
+    "        RETURN i * i; \n",
+    "    END;\n",
+    "$$ LANGUAGE plpgsql;\n",
+    "\n",
+    "-- Calling the function\n",
+    "SELECT func_name(10);\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "-- Available extensions ready to be enabled\n",
+    "SELECT name FROM pg_available_extensions;\n",
+    "\n",
+    "-- Enable an extension\n",
+    "CREATE EXTENSION IF NOT EXISTS fuzzystrmatch;\n",
+    "\n",
+    "-- See enabled extensions\n",
+    "SELECT extname FROM pg_extension;\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
