Chapter 3 : Seasonality, Trend and Noise

--- a/Python/Visualizing Time Series Data in Python/takeaways.ipynb
+++ b/Python/Visualizing Time Series Data in Python/takeaways.ipynb
@@ -52,6 +52,28 @@
     "rolling_mean = df.rolling(window=52).mean()\n",
     "# Other types of plots\n",
     "df.plot(kind='hist', bins=100) # other types include 'kde', 'box' etc\n",
+    "\n",
+    "# Auto-correlation\n",
+    "from statsmodels.graphics import tsaplots\n",
+    "fig = tsaplots.plot_acf(df['col'], lags=40)\n",
+    "# Partial Auto-correlation\n",
+    "from statsmodels.graphics import tsaplots\n",
+    "fig = tsaplots.plot_pacf(co2_levels['co2'], lags=40)\n",
+    "\n",
+    "# Time series decomposition\n",
+    "import statsmodels.api as sm\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pylab import rcParams\n",
+    "rcParams['figure.figsize'] = 11, 9\n",
+    "decomposition = sm.tsa.seasonal_decompose(df['col'])\n",
+    "fig = decomposition.plot()\n",
+    "plt.show()\n",
+    "print(dir(decomposition)) # See what can be used\n",
+    "decomp_seasonal = decomposition.seasonal # Seasonal component\n",
+    "decomp_trend = decomposition.trend # Trend component\n",
+    "decomp_resid = decomp.resid # Residual component\n",
+    "\n",
+    "\n",
     "```"
    ]
   },
@@ -116,7 +138,39 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Autocorrelation and partial autocorrelation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Autocorrelation:\n",
+    "- Lets consider a series 1,2,3,4,5,6\n",
+    "- There is a correlation between every consecutive elements:\n",
+    "    - second number = first number + 1 (correlation between first and second number)\n",
+    "    - third number = second number + 1 (correlation between second and third number)\n",
+    "- This consecutive correlation goes on for every n-th element with its previous element and evaluates the same correlation value\n",
+    "- We can say this is kind of an echo that is embedded within every n-th element of the sequence\n",
+    "- We call this autocorrelation.\n",
+    "- So we say,  Autocorrelation is the Correlation of a series with a lagged copy of itself\n",
+    "- We need it while working with time series.\n",
+    "- Negative autocorrelation : Mean Reversion\n",
+    "- Positive autocorrelation : Momentum, or Trend Following \n",
+    "\n",
+    "- Partial Autocorrelation:\n",
+    "- Shows incremental benefit of adding nth lag when n-1 lags are already present\n",
+    "- Removes the effects of previous lags (cumulative nth - cumulative n-1th)\n",
+    "- eg: a partial autocorrelation function of order 3 returns the correlation between our time series  t1 and lagged values of itself by 3 time points  t4 but only after removing all effects attributing to lags 1 and 2"
+   ]
   }
  ],
  "metadata": {
