Chapter 4 : Work with Multiple Time Series

--- a/Python/Visualizing Time Series Data in Python/takeaways.ipynb
+++ b/Python/Visualizing Time Series Data in Python/takeaways.ipynb
@@ -49,6 +49,14 @@
     "ax.axvspan('1964-01-01', '1968-01-01', color='red', alpha=0.3) # Vertical region, uses time index range\n",
     "ax.axhspan(8, 6, color='green', alpha=0.3)  # Horizontal region, uses y value range\n",
     "\n",
+    "df_summary = sub_df.describe()\n",
+    "# Attach information table with the plot\n",
+    "ax.table(cellText=df_summary.values,\n",
+    "        colWidths=[0.3]*len(df.columns), # Specify width of the table\n",
+    "        rowLabels=df_summary.index, # Specify row labels\n",
+    "        colLabels=df_summary.columns, # Specify column labels\n",
+    "        loc='top') # Specify location of the table in the plot\n",
+    "\n",
     "rolling_mean = df.rolling(window=52).mean()\n",
     "# Other types of plots\n",
     "df.plot(kind='hist', bins=100) # other types include 'kde', 'box' etc\n",
@@ -170,6 +178,40 @@
     "- Shows incremental benefit of adding nth lag when n-1 lags are already present\n",
     "- Removes the effects of previous lags (cumulative nth - cumulative n-1th)\n",
     "- eg: a partial autocorrelation function of order 3 returns the correlation between our time series  t1 and lagged values of itself by 3 time points  t4 but only after removing all effects attributing to lags 1 and 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Heatmap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Drop highly correlated features if you are confident that they may add bias into the model\n",
+    "corr_df = df.corr(method='pearson') # could also be 'spearman' or 'kendall'\n",
+    "mask = np.triu(np.ones_like(corr_df, dtype=bool))\n",
+    "sns.heatmap(corr_df, mask=mask, center=0, linewidths=1, annot=True, fmt=\".2f\")\n",
+    "# Alternative approach\n",
+    "corr_df = df.corr().abs()\n",
+    "mask = np.triu(np.ones_like(corr_df, dtype=bool))\n",
+    "tri_df = corr_df.mask(mask)\n",
+    "to_drop = [c for c in tri_df.columns if any(tri_df[c] > 0.95)]\n",
+    "reduced_df = chest_df.drop(to_drop, axis=1)\n",
+    "# Different concept : Hierarchical heatmap (similar columns are put closely together)\n",
+    "sns.clustermap(corr_df)\n",
+    "```"
    ]
   }
  ],
